# OpenFake

./: README.md  pyproject.toml  requirements.txt
baselines/: real_train_stats.npz
baselines/CLIP_baseline/: README.md  compute_metrics.py  generate_label_files.ipynb  main.py
baselines/FakeVLM/: README.md  eval.py
baselines/Floda/: README.md  eval.py
baselines/SwinV2/: README.md  eval.py  requirements.txt  train.py
baselines/intervl_baseline/: README.md  vlm_baseline.py
dataset/: .gitignore  README.md  filter_nsfw.py  generate_SD3.py  generate_batch_samples.py  generate_flux.py  generate_inpaint_prompts.py  generate_inpaint_samples.py  huggingface_pipeline.py  inpaint_pipeline.py  laion_filtering.py  prompt_manager.py  reddit_scraper.py  requirements.txt
dataset/utils/: download-inpainting-masks.py  download-masking-offline.py  download_nsfw_detector.py  expand_masks.py  generate_reddit_metadata.py  get-reddit-samples.py  model-registry-info.py  total-model-num.py  update_metadata.py  upload_reddit_parquet_files.py  upload_with_config_hf.py  upload_with_config_reddit.py  view_prompt_sample.py
dataset/video sampling/: generate_video_samples.py  scrape-sora.py
experiments/: README.md  config.py  train.py
experiments/augmentations/: compression.py  transforms.py
experiments/configs/: default.yaml  no_aug.yaml  of_no_autoextract.yaml  of_v2.yaml  sofake_v2.yaml
experiments/data/: collator.py  dataset.py  hf_dataset.py  splits.py  streaming_dataset.py
experiments/models/: build.py
experiments/scripts/: aggregate_results.py  build_of_splits.py  (+9 more)
(+8 files in other folders)
