[project]
name = "openfake"
version = "0.1.0"
description = "Codebase for OpenFake dataset and training OpenFake detectors for deepfake detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=2.19.1",
    "diffusers>=0.37.1",
    "faiss-cpu>=1.13.2",
    "grad-cam>=1.5.5",
    "imageio[ffmpeg]>=2.37.3",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torch-fidelity>=0.3.0",
    "tiktoken>=0.12.0",
    "torchvision>=0.25.0",
    "transformers>=4.53.3",
    "umap-learn>=0.5.11",
    "wandb>=0.24.0",
    "sentencepiece>=0.2.1",
    "pillow-avif-plugin>=1.5.5",
    "pillow-heif>=1.3.0",
    "timm>=1.0.26",
    "open-clip-torch>=3.3.0",
]
